# rust-desktop-app-template

./: .env.example  .gitignore  AGENTS.md  README.md  package.json  tauri-ai-app.md
.claude/: quick-context.md  settings.local.json
.claude/specs/chat-history-feature/: DELIVERY_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  USER_GUIDE.md  requirements.md  tech-design-v2.md  tech-design.md
.github/: copilot-instructions.md
docs/: DATABASE_MIGRATIONS.md  DIRECTORY_SELECTION_FIX.md  PATH_HANDLING.md  PATH_UNIFICATION_SUMMARY.md  RECENT_DIRECTORIES_IMPLEMENTATION.md  SETTINGS_FEATURES_IMPLEMENTATION.md  SETTINGS_INTEGRATION.md  TROUBLESHOOTING.md
frontend/: index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/components/chat/: ChatHistoryDialog.vue  ChatPanel.vue
frontend/src/components/editor/: CodeEditor.vue  CodeEditor1.vue
frontend/src/components/error/: ErrorContainer.vue  ErrorToast.vue  index.ts
frontend/src/components/features/SettingsPanel/: AiModelsManagement.vue  CliPathsSettings.vue  CodeCliManagement.vue  SettingsPanel.vue
frontend/src/components/file-explorer/: FileExplorer.vue  FileExplorer1.vue
frontend/src/components/layout/: BottomTabs.vue  EditorArea.vue  MainLayout.vue  MainLayout1.vue  MainSidebar.vue
frontend/src/components/output/: OutputPanel.vue
frontend/src/components/settings/: AiModelsManagement.vue  CliPathsSettings.vue  CodeCliManagement.vue  EnvironmentVariables.vue  SettingsPanel.vue
frontend/src/components/terminal/: TerminalPanel.vue
frontend/src/pages/Dashboard/: index.vue
frontend/src/pages/Home/: index.vue
frontend/src/pages/Login/: index.vue
frontend/src/pages/Settings/: AiModels.vue  CliPaths.vue  CodeCli.vue  Environment.vue  app.vue  index.vue
frontend/src/router/: index.ts
frontend/src/services/tauri/: commands.ts  eventListeners.ts  events.ts  lightweightMode.ts
frontend/src/stores/: WorkspaceStore.ts  app.ts  appStore.ts  chatStore.ts  filesStore.ts  index.ts  terminalStore.ts  themeStore.ts  userStore.ts
frontend/src/stores/modules/: files.ts
frontend/src/styles/: base.css  components.css  main.css  utilities.css
frontend/src/styles/themes/: dark.css  light.css
frontend/src/utils/: PATH_HANDLING.md  constants.ts  fileIcons.ts  helpers.ts  monaco.ts  pathUtils.ts  toast.ts
frontend/src/utils/types/: index.ts
scripts/: fetch-codeagent-wrapper.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/config/: loader.rs  mod.rs  schema.rs
src-tauri/src/core/: app.rs  mod.rs  notification_manager.rs  tray.rs  window_event_manager.rs
src-tauri/src/database/: connection.rs  mod.rs
src-tauri/src/database/models/: conversion.rs  mod.rs  settings.rs  workspace.rs
src-tauri/src/database/repositories/: mod.rs  recent_directories_repository.rs  settings_repository.rs  workspace_repository.rs
src-tauri/src/migration/: m20250101_000001_create_settings_table.rs  m20251219_132921_create_workspace_table.rs  m20251219_210614_workspace.rs  m20251221_101715_create_conversion_table.rs  mod.rs
src-tauri/src/services/: ai.rs  chat_session.rs  mod.rs  terminal.rs
src-tauri/src/tauri/: chat_session_commands.rs  codeagent_commands.rs  commands.rs  event_handlers.rs  events.rs  fs_command.rs  mod.rs  notification_commands.rs  settings_commands.rs  workspace_command.rs
src-tauri/src/utils/: error.rs  fs.rs  logging.rs  mod.rs
